# SEKURO_TUGAS_1_Made-Branenda-Jordhy_PROGRAMMING

soal/soal_1_oop/: core_mcu.cpp  main
soal/soal_2_bonus/: mcu.cpp
soal/soal_2_oop/: main  mcu_walker.hpp
soal/soal_cmake/: CMakeLists.txt
src/oop_soal_1/: core_mcu.hpp
src/oop_soal_2/: mcu_walker.cpp
src/oop_soal_2_bonus/: mcu.hpp  mcu_cam_controller.cpp
src/ros_soal_1/sekuro_ws/chatSystem/: CMakeLists.txt
src/ros_soal_1/sekuro_ws/chatSystem/include/chatSystem/: IMUSensor.hpp  MovingAverageFilter.hpp  Sensor.hpp  TempSensor.hpp  UltrasonicSensor.hpp
src/ros_soal_1/sekuro_ws/chatSystem/src/: IMUSensor.cpp  MovingAverageFilter.cpp  Sensor.cpp  TempSensor.cpp  UltrasonicSensor.cpp  listener.cpp  talker.cpp
src/ros_soal_1/sekuro_ws/install/: local_setup.bash  local_setup.ps1  local_setup.sh  local_setup.zsh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/ros_soal_1/sekuro_ws/install/chatSystem/lib/chatSystem/: listener  talker
src/ros_soal_1/sekuro_ws/install/chatSystem/share/ament_index/resource_index/parent_prefix_path/: chatSystem
src/ros_soal_1/sekuro_ws/install/chatSystem/share/chatSystem/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
src/ros_soal_1/sekuro_ws/log/: latest_build
src/ros_soal_2/: ROS2 Workspace Explanation.mov
src/stl_soal/: main  main.cpp
